--- a/InterfaceV2_CoreScript.html
+++ b/InterfaceV2_CoreScript.html
@@ -1418,17 +1418,21 @@ window.handleSortEnd = function(evt) {
 async function loadDataForMode(mode) {
   showSpinner();
   try {
-    // Appel à la fonction Google Apps Script pour récupérer les données
+    // 🎯 Appel à l'adaptateur SAS dédié
     const result = await gsRun('getClassesDataForInterfaceV2', mode);
-    console.log('🔍 RÉSULTAT COMPLET getClassesDataForInterfaceV2:', JSON.stringify(result, null, 2));
+    console.log('🎯 RÉSULTAT SAS getClassesDataForInterfaceV2:', JSON.stringify(result, null, 2));
     console.log('🔍 Type de result:', typeof result);
     console.log('🔍 result.success:', result?.success);
-    console.log('🔍 result.data:', result?.data);
+    console.log('🔍 result.data (Array):', result?.data);
+    console.log('🔍 result.rules (_STRUCTURE):', result?.rules);
     console.log('🔍 Nombre de classes:', result?.data?.length);
+    
     if (!result || !result.success) {
       console.error('❌ Erreur lors du chargement des données:', result?.error);
+      showErrorState(result?.error || 'Erreur inconnue');
       return false;
     }
+    
     // Stocker les données dans STATE
     STATE.originalData = result.data;
     STATE.rules = result.rules || {};
